data/derived/sp14/progs/unify/prog4659.ml.out
Characters 142-143:
  | ArcSine e -> 1/.sin(pi*.eval(e,x,y))
                 ^
Error: This expression has type int but an expression was expected of type
         float
